gitops/manifests/paperless-ngx/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: paperless-ngx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: webserver
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webserver
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: webserver
        app.kubernetes.io/name: paperless-ngx
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s-2-worker
      containers:
        - env:
            - name: PAPERLESS_DBHOST
              value: <path:secret/data/postgres_db#HOST_NAME>
            - name: PAPERLESS_DBNAME
              value: paperless_utf8
            - name: PAPERLESS_DBPASS
              value: <path:secret/data/postgres_db#PASSWORD>
            - name: PAPERLESS_DBPORT
              value: "5432"
            - name: PAPERLESS_DBUSER
              value: <path:secret/data/postgres_db#USER>
            - name: PAPERLESS_REDIS
              value: "<path:secret/data/database#REDIS_CONN_STRING>"
            - name: PAPERLESS_URL
              value: https://paperless.local.timmybtech.com
            - name: PAPERLESS_ADMIN_USER
              value: <path:secret/data/argocd#PAPERLESS_ADMIN_USER>
            - name: PAPERLESS_ADMIN_PASSWORD
              value: <path:secret/data/argocd#PAPERLESS_ADMIN_PASSWORD>
            - name: PAPERLESS_SECRET_KEY
              value: <path:secret/data/argocd#PAPERLESS_SECRET_KEY>
            - name: PAPERLESS_APPS
              value: "allauth.socialaccount.providers.openid_connect"
            - name: PAPERLESS_SOCIALACCOUNT_PROVIDERS
              value: |
                {
                  "openid_connect": {
                    "APPS": [
                      {
                        "provider_id": "authentik",
                        "name": "Authentik",
                        "client_id": "<path:secret/data/argocd#AUTHENTIK_PAPERLESS_CLIENT_ID>",
                        "secret": "<path:secret/data/argocd#AUTHENTIK_PAPERLESS_SECRET_ID>",
                        "settings": {
                          "server_url": "https://authentik.timmybtech.com/application/o/paperless/.well-known/openid-configuration"
                        }
                      }
                    ],
                    "OAUTH_PKCE_ENABLED": "True"
                  }
                }
          image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0
          imagePullPolicy: IfNotPresent
          name: webserver
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: data
            - mountPath: /usr/src/paperless/media
              name: media
            - mountPath: /usr/src/paperless/export
              name: paperless-export
            - mountPath: /usr/src/paperless/consume
              name: paperless-consume
          resources:
            requests:
              cpu: "100m"
              memory: "600Mi"
            limits:
              cpu: "500m"
              memory: "800Mi"
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: paperless-export
          persistentVolumeClaim:
            claimName: paperless-export
        - name: paperless-consume
          persistentVolumeClaim:
            claimName: paperless-consume
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: webserver
  name: webserver
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: webserver
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ingress
  namespace: paperless-ngx
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.local.timmybtech.com`)
      kind: Rule
      services:
        - name: webserver
          port: 8000
  tls:
    secretName: local-timmybtech-com-tls
